--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -116,7 +116,7 @@
         });
         
         var screenHeight = $(window).height();
-        $("#preorder").css('min-height', screenHeight); 
+        //$("#preorder").css('min-height', screenHeight); 
         
         var csrftoken = getCookie('csrftoken');
         
