--- a/landing/static/landing/css/style.css
+++ b/landing/static/landing/css/style.css
@@ -52,7 +52,7 @@ video#cat-video {
 #intro-main-inner {
     margin-left: auto;
     margin-right: auto;
-    width: 420px;
+    width: 430px;
     text-align: center;
 
 }
@@ -74,7 +74,7 @@ video#cat-video {
     color: #ff5148;//#fff;
     font-size: 50px;
     height: 120px;
-    width: 420px;
+    width: 430px;
     
 }
 #main {
@@ -98,7 +98,7 @@ video#cat-video {
 
 #main-wrapper {
     width: 950px;
-    height: 100%;
+    //height: 100%;
     margin: auto;
     margin-top: 100px;
 }
@@ -123,7 +123,7 @@ video#cat-video {
 #main-wrapper-features {
     //background-color: #bdc3c7; //#e67e22;
     clear: both;
-    height: 100%;
+    //height: 100%;
     min-height: 613px;
     margin: 0;
 }
