--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="intro">
-        <video autoplay loop poster="../../static/landing/img/cat-poster.jpg" id="cat-video">
+        <video autoplay loop poster="../../static/landing/img/cat-poster.jpg" id="cat-video" muted>
             <source src="../../static/landing/video/cat1.webm" type="video/webm">
             <source src="../../static/landing/video/cat1.mp4" type="video/mp4">
             <source src="../../static/landing/video/cat1.ogv" type="video/ogv">      
